--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ html {
 
 body {
   background-color: #0B0B0B;
-  color: #FDFDFD;
+  color: #FDDDFF;
 }
 
 .btn-primary {
@@ -54,7 +54,7 @@ body {
   background-color: #1F1F1F;
 }
 
-.input {
+input {
   width: 100%;
   padding: 0.625rem 1rem;
   background-color: #121212;
@@ -64,12 +64,12 @@ body {
   transition: all 150ms;
 }
 
-.input:focus {
+input:focus {
   outline: none;
   border-color: #FDFDFD;
 }
 
-.input::placeholder {
+input::placeholder {
   color: #8A8A8A;
 }
 
@@ -84,7 +84,6 @@ body {
   background-color: #121212;
   border: 1px solid #2A2A2A;
   border-radius: 12px;
-  padding: 1rem;
   cursor: pointer;
   transition: all 150ms;
 }
